Try to fix decoration on ios

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,10 +16,15 @@
   .circle-two-dashes {
     stroke-dasharray: 70;
     stroke-dashoffset: 260;
+
+    min-height: -webkit-fill-available;
+    min-width: -webkit-fill-available;
   }
 
   .circle-one-dash {
     stroke-dasharray: 283;
     stroke-dashoffset: 240;
+    min-height: -webkit-fill-available;
+    min-width: -webkit-fill-available;
   }
 }
